Update and rename email.html to lead.html

--- a/email/lead.html
+++ b/email/lead.html
@@ -21,7 +21,6 @@
       padding: 0;
       -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
-      color: #000000;
     }
 
     table,
@@ -43,7 +42,6 @@
     p {
       display: block;
       margin: 13px 0;
-      color: #000000;
     }
 
   </style>
@@ -303,27 +301,57 @@
                   </tr>
 
                   <tr>
+                    <td align="center" style="font-size:0px;padding:0px 0px 0px 0px;word-break:break-word;">
+
+                      <table border="0" cellpadding="0" cellspacing="0" role="presentation"
+                        style="border-collapse:collapse;border-spacing:0px;" class="full-width-mobile">
+                        <tbody>
+                          <tr>
+                            <td style="width:102px;" class="full-width-mobile">
+
+                              <a href="https://ci4.googleusercontent.com/proxy/HCuIrxH4cioTVxJRzz_9g_8az1WOm4mgoJpKEnfxmK0qge3wX9btqGQ2jaFlqsDQXaMYnAscWvUQJkL2vg_X6aWQhehe0TJ4-SI_KsZQAGIcbkH0Y7wuDReleTANoa0rN_NjKihAkgOOlp6nVr2HNfKdCSfvhCpoP0zkmRzw929einz3Sw=s0-d-e1-ft#https://pqbhio.stripocdn.email/content/guids/CABINET_c24d8f689c84cd171ed0f0027d5cd4fb/images/59601631030894744.png"
+                                target="_blank" style="color: #0000EE;">
+
+                                <img height="auto"
+                                  src="https://ci4.googleusercontent.com/proxy/HCuIrxH4cioTVxJRzz_9g_8az1WOm4mgoJpKEnfxmK0qge3wX9btqGQ2jaFlqsDQXaMYnAscWvUQJkL2vg_X6aWQhehe0TJ4-SI_KsZQAGIcbkH0Y7wuDReleTANoa0rN_NjKihAkgOOlp6nVr2HNfKdCSfvhCpoP0zkmRzw929einz3Sw=s0-d-e1-ft#https://pqbhio.stripocdn.email/content/guids/CABINET_c24d8f689c84cd171ed0f0027d5cd4fb/images/59601631030894744.png"
+                                  style="border:0;display:block;outline:none;text-decoration:none;height:auto;width:100%;font-size:13px;"
+                                  width="102">
+
+                              </a>
+
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+
+                    </td>
+                  </tr>
+
+                  <tr>
                     <td align="left" style="font-size:0px;padding:15px 15px 15px 15px;word-break:break-word;">
 
                       <div
                         style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:13px;line-height:1.5;text-align:left;color:#000000;">
                         <p style="font-size: 11px; font-family: Ubuntu, Helvetica, Arial;"><span
-                            style="font-size: 11px; color: rgb(0, 0, 0);">Hi Abhinav Singh,</span></p>
+                            style="font-size: 11px; color: rgb(12, 11, 11);">Hi Abhinav Singh,</span></p>
                         <p style="font-size: 11px; font-family: Ubuntu, Helvetica, Arial;">&nbsp;</p>
                         <p style="font-size: 11px; font-family: Ubuntu, Helvetica, Arial;"><span
-                            style="font-size: 11px; color: rgb(0, 0, 0);">Congratulations! We are thrilled to inform you
+                            style="font-size: 11px; color: rgb(12, 11, 11);">Congratulations! We are thrilled to inform
+                            you
                             that you have been selected as a Cloud Computing Lead for DSC Sagar Institute Of Science and
                             Technology!</span></p>
                         <p style="font-size: 11px; font-family: Ubuntu, Helvetica, Arial;">&nbsp;</p>
                         <p style="font-size: 11px; font-family: Ubuntu, Helvetica, Arial;"><span
-                            style="font-size: 11px; color: rgb(0, 0, 0);">You are joining an amazing community of
+                            style="font-size: 11px; color: rgb(12, 11, 11);">You are joining an amazing community of
                             student leads who will be representing</span></p>
                         <p style="font-size: 11px; font-family: Ubuntu, Helvetica, Arial;"><span
-                            style="font-size: 11px; color: rgb(0, 0, 0);">hundreds of colleges and universities across
+                            style="font-size: 11px; color: rgb(12, 11, 11);">hundreds of colleges and universities
+                            across
                             the globe. </span></p>
                         <p style="font-size: 11px; font-family: Ubuntu, Helvetica, Arial;">&nbsp;</p>
                         <p style="font-size: 11px; font-family: Ubuntu, Helvetica, Arial;"><span
-                            style="font-size: 11px; color: rgb(0, 0, 0);">You were selected because you are a leader who
+                            style="font-size: 11px; color: rgb(12, 11, 11);">You were selected because you are a leader
+                            who
                             believes that technology can do extraordinary things for the world. You have taken on the
                             responsibility to help students grow as developers and empower these students to impact
                             their communities with technology. Through this experience you will not only be leaving a
@@ -331,22 +359,20 @@
                             the greater developer ecosystem.</span></p>
                         <p style="font-size: 11px; font-family: Ubuntu, Helvetica, Arial;">&nbsp;</p>
                         <p style="font-size: 11px; font-family: Ubuntu, Helvetica, Arial;"><span
-                            style="font-size: 11px; color: rgb(0, 0, 0);">Next step? Please join this <span
+                            style="font-size: 11px; color: rgb(12, 11, 11);">Next step? Please join this <span
                               style="color: rgb(4, 113, 245);"><a style="color: rgb(4, 113, 245);"
                                 href="https://chat.whatsapp.com/HhvvyWeNv8YJZTmYsTULVZ" target="_blank"
-                                rel="noopener">group&nbsp;</a><a style="color: rgb(4, 113, 245);"
-                                href="https://chat.whatsapp.com/HhvvyWeNv8YJZTmYsTULVZ" target="_blank"
-                                rel="noopener">(click here)</a></span> and note that if you are joining the above group
+                                rel="noopener">group </a></span>&nbsp;and note that if you are joining the above group
                             then you are willing to contribute. Let's make the most of this opportunity.</span></p>
                         <p style="font-size: 11px; font-family: Ubuntu, Helvetica, Arial;">&nbsp;</p>
                         <p style="font-size: 11px; font-family: Ubuntu, Helvetica, Arial;"><span
-                            style="font-size: 11px; color: rgb(0, 0, 0);">Best wishes,</span></p>
+                            style="font-size: 11px; color: rgb(12, 11, 11);">Best wishes,</span></p>
                         <p style="font-size: 11px; font-family: Ubuntu, Helvetica, Arial;"><span
-                            style="font-size: 11px; color: rgb(0, 0, 0);">Muskan Tulsiyani</span></p>
+                            style="font-size: 11px; color: rgb(12, 11, 11);">Muskan Tulsiyani</span></p>
                         <p style="font-size: 11px; font-family: Ubuntu, Helvetica, Arial;"><span
-                            style="font-size: 11px; color: rgb(0, 0, 0);">GDSC Lead</span></p>
+                            style="font-size: 11px; color: rgb(12, 11, 11);">GDSC Lead</span></p>
                         <p style="font-size: 11px; font-family: Ubuntu, Helvetica, Arial;"><span
-                            style="font-size: 11px; color: rgb(0, 0, 0);">Sagar Institute Of Science and
+                            style="font-size: 11px; color: rgb(12, 11, 11);">Sagar Institute Of Science and
                             Technology</span></p>
                       </div>
 
